lib/bombadil-browser/src/instrumentation/snapshots/bombadil_browser__instrumentation__html__tests__instrument_html_inline_script_no_type.snap
---
source: lib/bombadil-browser/src/instrumentation/html.rs
expression: output
---
<!DOCTYPE html><html><head></head><body>
<script>window.__bombadil__ = window.__bombadil__ || {
    edges_previous: new Uint8Array(65536),
    edges_current: new Uint8Array(65536),
    previous: 0,
};
function example(a, b, c) {
	return a ? (__bombadil__.edges_current[((0x22c1feea839d4200 ^ __bombadil__.previous) >>> 0) % 65536] += 1, __bombadil__.previous = 0x22c1feea839d4200 >> 1, b) : (__bombadil__.edges_current[((0x11b1b3220bdaeb00 ^ __bombadil__.previous) >>> 0) % 65536] += 1, __bombadil__.previous = 0x11b1b3220bdaeb00 >> 1, c);
}
console.log(example(true, 1, 2));
</script>


</body></html>
