lib/bombadil-browser/src/instrumentation/snapshots/bombadil_browser__instrumentation__html__tests__instrument_html_inline_script_other_type.snap
---
source: lib/bombadil-browser/src/instrumentation/html.rs
assertion_line: 175
expression: output
---
<!DOCTYPE html><html><head></head><body>
<script type="text/other">
if (foo) {
    this_is_not_a_script();
}
</script>


</body></html>
