lib/bombadil-browser/src/instrumentation/snapshots/bombadil_browser__instrumentation__html__tests__instrument_html_template.snap
---
source: lib/bombadil-browser/src/instrumentation/html.rs
expression: output
---
<!DOCTYPE html><html><head></head><body>
<template>
<p>Leave template alone!</p>
</template>


</body></html>
